# rockin_athome

./: README.md  repository.rosinstall
rockin_athome/: CMakeLists.txt  package.xml
script_server_tutorial/: CMakeLists.txt  package.xml  setup.py
script_server_tutorial/ros/scripts/: test_script.py
